--- a/segundo.html
+++ b/segundo.html
@@ -5,5 +5,6 @@
   </head>
   <body><h1>Segundo arquivo</h1><br>
   Aqui vai o texto! é uma frase melhorada...fiz uma corretiva! :)
+  <a href="terceiro.html">Terceiro arquivo</a>
   </body>
 </html>
